Update mask-size for the new photon style help icon, fixes #6978. (#6979)

--- a/src/components/SecondaryPanes/CommandBar.css
+++ b/src/components/SecondaryPanes/CommandBar.css
@@ -94,6 +94,7 @@ img.skipPausing {
 
 .command-bar img.shortcuts {
   mask: url(/mc/help.svg) no-repeat;
+  mask-size: contain;
 }
 
 .command-bar .replay-inactive {
