Add "More shortcuts..." in welcome screen (#6917)

--- a/src/components/WelcomeBox.css
+++ b/src/components/WelcomeBox.css
@@ -51,7 +51,8 @@
 }
 
 .welcomebox__searchSources:hover,
-.welcomebox__searchProject:hover {
+.welcomebox__searchProject:hover,
+.welcomebox__allShortcuts:hover {
   color: var(--theme-body-color);
 }
 
