--- a/src/components/Editor/Editor.css
+++ b/src/components/Editor/Editor.css
@@ -86,6 +86,12 @@ html[dir="rtl"] .editor-mount {
   mask-size: auto 12px;
   mask-position: right;
 }
+.theme-light .cm-s-mozilla .empty-line .CodeMirror-linenumber {
+  color: var(--grey-30);
+}
+.theme-dark .cm-s-mozilla .empty-line .CodeMirror-linenumber {
+  color: var(--grey-70);
+}
 
 .editor-wrapper .breakpoints {
   position: absolute;
