--- a/src/components/SecondaryPanes/Frames/Frames.css
+++ b/src/components/SecondaryPanes/Frames/Frames.css
@@ -30,8 +30,12 @@
 
 .frames .location {
   font-weight: normal;
-  text-overflow: ellipsis;
-  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  margin: 0;
+  flex-shrink: 0;
 }
 
 .theme-light .frames .location {
@@ -44,8 +48,9 @@
 }
 
 .frames .title {
+  text-overflow: ellipsis;
+  overflow: hidden;
   margin: 7px 0.5em 7px 0;
-  flex-shrink: 0;
 }
 
 .frames ul li:hover,
